# sse-queue

./: .gitignore  Cargo.toml  README.md  build.rs  test.py
.gitea/workflows/: build-image.yml
data/: config.toml
docker-build/: Dockerfile  config.toml
docs/: api.md
src/: config.rs  loginit.rs  main.rs
src/apps/: auth.rs  error.rs  init.rs  mod.rs  msg.rs  onlinelog.rs  seekstream.rs  state.rs  storage.rs  types.rs
