[package]
name = "sse-queue"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = { version = "0.8" }
anyhow = { version = "1.0.80" }
log = { version = "0.4" }
env_logger = { version = "0.11" }
clap = { version = "4", features = ["derive"] }
rocket = {version="0.5.1",features = ["json", "tls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
chrono = { version = "0.4.34" }
colored = "2.1.0"
rand = "0.8.5"
range_header = "0.2.0"
